[package]
name = "physics2_simulation_2"
version = "0.1.0"
authors = ["Nam Jeonghyun <ska827@snu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "phys"
path = "src/lib.rs"

[dependencies]
rayon = "1.2"
rand = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
